mileStone 1: feat 2.1: fixed some logic 2 except Spring Security